--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       smoothThreshold="5"
     >
       <a-entity
-        gltf-model="https://woshihhnecxu.github.io/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
+        gltf-model="https://woshihhnecxu.github.io/test.glb"
         scale="5 5 5"
         position="150 300 -100"
       >
