--- a/set.html
+++ b/set.html
@@ -1,4 +1,8 @@
 <!-- import aframe and then ar.js with image tracking / location based features -->
+<script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+<script>
+    var vConsole = new window.VConsole();
+</script>
 <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
