--- a/set.html
+++ b/set.html
@@ -64,3 +64,9 @@
     <a-entity camera></a-entity>
   </a-scene>
 </body>
+<script>
+    window.addEventListener("arjs-nft-loaded", (event) => {
+        // Hide loading overlay
+        console.log("arjs-nft-loaded")
+    });
+</script>
