--- a/set.html
+++ b/set.html
@@ -50,7 +50,7 @@
     <!-- the path should end with the name without the extension e.g. if file is 'pinball.fset' the path should end with 'pinball' -->
     <a-nft
       type="nft"
-      url="https://woshihhnecxu.github.io/iset/one"
+      url="https://woshihhnecxu.github.io/iset/join_popup"
       smooth="true"
       smoothCount="10"
       smoothTolerance=".01"
