--- a/three.js/examples/basic.html
+++ b/three.js/examples/basic.html
@@ -107,7 +107,7 @@
 	var markerControls = new THREEx.ArMarkerControls(arToolkitContext, camera, {
 		type : 'pattern',
 		// patternUrl : THREEx.ArToolkitContext.baseURL + '../data/data/patt.hiro',
-		patternUrl : THREEx.ArToolkitContext.baseURL + '../data/data/patt.qunxing',
+		patternUrl : THREEx.ArToolkitContext.baseURL + '../data/data/patt.qx2',
 		// patternUrl : THREEx.ArToolkitContext.baseURL + '../data/data/patt.kanji',
 		// as we controls the camera, set changeMatrixMode: 'cameraTransformMatrix'
 		changeMatrixMode: 'cameraTransformMatrix'
