--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- import aframe and then ar.js with image tracking / location based features -->
 <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-11
+
 <!-- style for the loader -->
 <style>
   .arjs-loader {
@@ -25,6 +25,12 @@
 </style>
 
 <body style="margin : 0px; overflow: hidden;">
+  <a href="https://github.com/jeromeetienne/AR.js/" target="_blank">AR.js</a> - three1.js camera transform
+	<br/>
+	Contact me any time at <a href='https://twitter.com/jerome_etienne' target='_blank'>@jerome_etienne</a>
+
+
+
   <!-- minimal loader shown until image descriptors are loaded. Loading may take a while according to the device computational power -->
   <div class="arjs-loader">
     <div>Loading, please wait...</div>
