--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- import aframe and then ar.js with image tracking / location based features -->
 <script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
-<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+<!-- <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script> -->
 <script src="/build/aframe-ar-nft.js"></script>
 
 <!-- style for the loader -->
@@ -26,7 +26,7 @@
 </style>
 
 <body style="margin : 0px; overflow: hidden;">
-  <a href="https://github.com/jeromeetienne/AR.js/" target="_blank">AR.js</a> - three1.js camera transform
+  <a href="https://github.com/jeromeetienne/AR.js/" target="_blank">AR.js</a> - three2.js camera transform
 	<br/>
 	Contact me any time at <a href='https://twitter.com/jerome_etienne' target='_blank'>@jerome_etienne</a>
 
@@ -72,3 +72,9 @@
     <a-entity camera></a-entity>
   </a-scene>
 </body>
+
+<script>
+  window.addEventListener("arjs-nft-loaded", (event) => { 
+    console.log("arjs-nft-loade..............")
+  });
+</script>
