--- a/arjsdemo/ImageTracking.html
+++ b/arjsdemo/ImageTracking.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
+<div>@@@@@@@@@1111</div>
 <script>
     var vConsole = new window.VConsole();
 </script>
