--- a/arjsdemo/ImageTracking.html
+++ b/arjsdemo/ImageTracking.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <script src="https://unpkg.com/vconsole@latest/dist/vconsole.min.js"></script>
-<div>@@@@@@@@@1111</div>
 <script>
     var vConsole = new window.VConsole();
 </script>
@@ -38,7 +37,8 @@
     </div>
     <a-scene arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;" embedded
         renderer="logarithmicDepthBuffer: true;" vr-mode-ui="enabled: false" gesture-detector id="scene">
-        <a-nft type="nft" url="https://woshihhnecxu.github.io/arjsdemo/nft/iset/qx3" smooth="true"
+        <!-- <a-nft type="nft" url="https://woshihhnecxu.github.io/arjsdemo/nft/iset/join_popup" smooth="true" -->
+        <a-nft type="nft" url="https://woshihhnecxu.github.io/arjsdemo/nft/iset2/pinball" smooth="true"
             smoothCount="10" smoothTolerance=".01" smoothThreshold="5" raycaster="objects: .clickable" emitevents="true"
             cursor="fuse: false; rayOrigin: mouse;">
             <!-- <a-entity gltf-model="./nft/test.gltf" scale="5 5 5" position="50 150 0" class="clickable" gesture-handler>
@@ -52,7 +52,7 @@
 <script>
     window.addEventListener("arjs-nft-loaded", (event) => {
         // Hide loading overlay
-        console.log("arjs-nft-loaded1")
+        console.log("arjs-nft-loaded")
     });
 </script>
 
