--- a/arjsdemo/ImageTracking.html
+++ b/arjsdemo/ImageTracking.html
@@ -52,7 +52,7 @@
 <script>
     window.addEventListener("arjs-nft-loaded", (event) => {
         // Hide loading overlay
-        console.log("arjs-nft-loaded")
+        console.log("arjs-nft-loaded222333")
     });
 </script>
 
