--- a/arjsdemo/ImageTracking1.html
+++ b/arjsdemo/ImageTracking1.html
@@ -54,13 +54,22 @@
         <a-entity gltf-model="./nft/trex/scene.gltf" scale="5 5 5" position="50 150 0" class="clickable"
             gesture-handler>
         </a-nft>
+        <a-nft type="nft" url="https://woshihhnecxu.github.io/arjsdemo/nft/iset5/1" smooth="true"
+            smoothCount="10" smoothTolerance=".01" smoothThreshold="5" raycaster="objects: .clickable" emitevents="true"
+            cursor="fuse: false; rayOrigin: mouse;">
+            <!-- <a-entity gltf-model="./nft/test.gltf" scale="5 5 5" position="50 150 0" class="clickable" gesture-handler>
+            </a-entity> -->
+            <a-entity gltf-model="./nft/trex/scene.gltf" scale="5 5 5" position="50 150 0" class="clickable"
+                gesture-handler>
+        </a-nft>
+
         <a-entity camera></a-entity>
     </a-scene>
 </body>
 <script>
     window.addEventListener("arjs-nft-loaded", (event) => {
         // Hide loading overlay
-        console.log("arjs-nft-loaded6-2")
+        console.log("arjs-nft-loaded6-3")
     });
 </script>
 
